--- a/netflix-dual-subtitle Extension/Info.plist
+++ b/netflix-dual-subtitle Extension/Info.plist
@@ -30,7 +30,7 @@
 		<dict>
 			<key>Allowed Domains</key>
 			<array>
-				<string>example.com</string>
+				<string>*.netflix.com</string>
 			</array>
 			<key>Level</key>
 			<string>Some</string>
