Adding native translation #13

--- a/Shared (Extension)/Resources/manifest.json
+++ b/Shared (Extension)/Resources/manifest.json
@@ -30,5 +30,5 @@
         "default_icon": "images/toolbar-icon.svg"
     },
 
-    "permissions": [ "storage" ]
+    "permissions": [ "storage", "nativeMessaging"]
 }
